[project]
name = "allinone-lazynode"
description = "Custom node for ComfyUI that collects key workflow settings in one place and exposes them as individual outputs."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# No additional Python dependencies required."]

[project.urls]
Repository = "https://github.com/max-dingsda/ComfyUI-AllinOne-LazyNode"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/max-dingsda/ComfyUI-AllinOne-LazyNode/wiki"
"Bug Tracker" = "https://github.com/max-dingsda/ComfyUI-AllinOne-LazyNode/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AllinOne-LazyNode"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

